# forever-jukebox

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  dev.sh  docker-compose.yml
.github/workflows/: android-debug-release.yml  docker-publish.yml
android/: README.md  gradle.properties
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/scripts/: build-debug-release.sh
api/: README.md  requirements.txt
api/api/: db.py  favorites_db.py  http_client.py  main.py  models.py  paths.py  settings.py  spotify.py  utils.py  youtube.py  ytdlp_config.py
api/api/routes/: config.py  favorites.py  jobs.py  media.py  search.py
api/data/: wordlist.ts
api/worker/: worker.py
docker/: entrypoint.sh
engine/: .gitignore  README.md  calibration.json  requirements-gpu-cuda.txt  requirements-gpu-rocm.txt  requirements.txt  schema.json
engine/app/: __init__.py  analysis.py  analyzer.py  analyzer_utils.py  audio.py  beats.py  config.py  env.py  features.py  features_essentia.py  features_gpu.py  gpu.py  main.py  segmentation.py
engine/test/: README.md  batch_analyze.py  compare.py
engine/training/: README.md  calibrate.py
engine3/fj_analysis_engine/: analysis.py  analyze.py  beats.py  calibrate.py
web/: .gitignore  README.md  cast-receiver.html  index.html  package-lock.json  package.json  vite.config.ts
web/public/: worker.js
web/public/.well-known/: assetlinks.json
web/src/: main.ts  polyfills.ts  retro.css  style.css
web/src/app/: api.ts  backgroundTimer.ts  bootstrap.ts  cache.test.ts  cache.ts  (+25 more)
(+83 files in other folders)
